--- a/presentation/index.html
+++ b/presentation/index.html
@@ -57,12 +57,13 @@
 				transform: scale(-1, 1);
 			}
 
+
 		</style>
 	</head>
 	<body onkeypress="toggleOnKeypress(event, '²')">
 		<img src="images/camera.png" style="position: absolute; bottom: 1vw; left: 1vw; width: 2vw; z-index: 3;" onclick="toggleVideo()">
 
-		<div id="polaroid" class="xhidden">
+		<div id="polaroid" class="hidden">
 			<img src="images/polaroid.png">
 			<div style="">
 				<video />
@@ -71,30 +72,34 @@
 
 		<div class="reveal">
 			<div class="slides" >
-				<section data-background-image="images/papier-h.gif">
-					Slide 1
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
+				<section data-background-image="images/pdg.png">
+					<img src="images/credit musique.png" style="position: fixed; bottom:7vw; left: 0vw; width: 10vw; border: none">
+					<audio src="musique/amours_et_printemps_short.wav" controls="controls" style="position: fixed; bottom:5vw; left: 0vw"></audio>
 				</section>
-				<section data-background-image="images/papier-h\'.gif">
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
-					<p>wdsfgsdgfdfgdsfg	Slide 2</p>
+				<section data-background-image="images/v1fermee.png">
 				</section>
-				<section data-background-image="images/papier-h\'.gif">
-					Slide 3
+				<section data-background-image="images/v1ouverte.png">
 				</section>
-				<section data-background-image="images/papier-h\'.gif">
-					Slide 4
+				<section data-background-image="images/triode.png">
 				</section>
+				<section data-background-image="images/v1ou.png">
+				</section>
+				<section data-background-image="images/v1et.png">
+				</section>
+				<section data-background-image="images/v1chaine.png">
+				</section>
+				<section data-background-image="images/v2.png">
+				</section>
+				<section data-background-image="images/v3.png">
+				</section>
+				<section data-background-image="images/v3variantes.png">
+				</section>
+				<section data-background-image="images/papier.png">
+					«Peut-être que tout simplement je m'imagine mal ce qu'est vraiment un informaticien et qu'en réalité c'est poétique comme métier.»
+					<br>
+					<span style="position: absolute; right: 1vw">-Laurence M.</span> 
+				</section>
+
 			</div>
 		</div>
 
