adds link to philipe chichon's website on postit on first page (music credit).

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -73,7 +73,7 @@
 		<div class="reveal">
 			<div class="slides" >
 				<section data-background-image="images/pdg.png">
-					<img src="images/credit musique.png" style="position: fixed; bottom:7vw; left: 0vw; width: 10vw; border: none">
+					<a href="http://philippe.cichon.free.fr/"><img src="images/credit musique.png" style="position: fixed; bottom:7vw; left: 0vw; width: 10vw; border: none"></a>
 					<audio src="musique/amours_et_printemps_short.wav" controls="controls" style="position: fixed; bottom:5vw; left: 0vw"></audio>
 				</section>
 				<section data-background-image="images/v1fermee.png">
