Adds support for 4:3 screen resolutions. Thanks Hubert !

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -78,6 +78,12 @@
 				top:0%;
 				margin-left: 0%;
 				transform: scale(-1, 1);
+				height: 100vh;
+				background-color: black;
+			}
+
+			.slide-background {
+				background-size: contain !important;
 			}
 
 		</style>
@@ -96,7 +102,7 @@
 			<div class="slides" >
 				<section data-background-image="images/pdg.png">
 					<a href="http://philippe.cichon.free.fr/"><img src="images/credit musique.png" style="position: fixed; bottom:7vw; left: 0vw; width: 10vw; border: none"></a>
-					<audio src="musique/amours_et_printemps_short.wav" controls="controls" style="position: fixed; bottom:5vw; left: 0vw"></audio>
+					<audio src="musique/amours_et_printemps.mp3" controls="controls" style="position: fixed; bottom:5vw; left: 0vw"></audio>
 				</section>
 				<section data-background-image="images/v1fermee.png">
 				</section>
