Modification pour le THSF (ajout addition et photo de l'orgue)

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -102,13 +102,19 @@
 			<div class="slides" >
 				<section data-background-image="images/pdg.png">
 					<a href="http://philippe.cichon.free.fr/"><img src="images/credit musique.png" style="position: fixed; bottom:7vw; left: 0vw; width: 10vw; border: none"></a>
-					<audio src="musique/amours_et_printemps.mp3" controls="controls" style="position: fixed; bottom:5vw; left: 0vw"></audio>
+					<audio src="musique/rock_around_the_clock.mp3" controls="controls" style="position: fixed; bottom:5vw; left: 0vw"></audio>
+				</section>
+				<section data-background-image="images/orgue.png">
 				</section>
 				<section data-background-image="images/v1fermee.png">
 				</section>
 				<section data-background-image="images/v1ouverte.png">
 				</section>
+				<section data-background-image="images/soupape.png">
+				</section>
 				<section data-background-image="images/triode.png">
+				</section>
+				<section data-background-image="images/addition.png">
 				</section>
 				<section data-background-image="images/v1ou.png">
 				</section>
